HEADER: fixing nav styles font size family spacing

--- a/styles.css
+++ b/styles.css
@@ -229,14 +229,17 @@ img {
 
 .overlay .overlay_nav {
     position: relative;
+    letter-spacing: 7px;
     height: 70%;
     top: 60%;
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
-    font-size: 50px;
+    font-size: 30px;
     font-family: 'Vollkorn', serif;
     font-weight: 400;
-    text-align: center;
+}
+.overlay_nav-num{
+    padding: 0 40px;
 }
 
 .overlay ul {
